--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -7,9 +7,12 @@ a.nav-dropdown {
 }
 
 a.nav-link {
-  color: var(--primary-color)
+  color: var(--primary-color);
+  border-radius: 1rem;
+  font-size: 1.5rem;
 }
 
 a.nav-link:hover {
-  background-color: var(--accent-color)
+  background-color: var(--accent-color);
 }
+
