--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -1,17 +1,18 @@
 <div class="container">
+  <app-header-element/>
+  <div class="row">
+    <div class="col-lg order-lg-last" style="background-color: green; min-height: 300px;"></div>
+    <div class="col-lg order-lg-first" style="background-color: red; min-height: 300px;"></div>
+  </div>
   <div class="row">
     <div class="col-lg" style="background-color: green; min-height: 300px;"></div>
     <div class="col-lg" style="background-color: red; min-height: 300px;"></div>
-  </div>  <div class="row">
-    <div class="col-lg order-lg-last" style="background-color: green; min-height: 300px;"></div>
-    <div class="col-lg order-lg-first" style="background-color: red; min-height: 300px;"></div>
-  </div>  <div class="row">
+  </div>
+  <div class="row">
     <div class="col-lg" style="background-color: green; min-height: 300px;"></div>
     <div class="col-lg" style="background-color: red; min-height: 300px;"></div>
-  </div>  <div class="row">
-    <div class="col-lg" style="background-color: green; min-height: 300px;"></div>
-    <div class="col-lg" style="background-color: red; min-height: 300px;"></div>
-  </div>  <div class="row">
+  </div>
+  <div class="row">
     <div class="col-lg" style="background-color: green; min-height: 300px;"></div>
     <div class="col-lg" style="background-color: red; min-height: 300px;"></div>
   </div>
