feat(29): Implement story-element

--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -6,7 +6,9 @@
   </div>
   <div class="row">
     <div class="col-lg" style="background-color: green; min-height: 300px;"></div>
-    <div class="col-lg" style="background-color: red; min-height: 300px;"></div>
+    <div class="col-lg">
+      <app-story-element [alignRight]=true [year]="2024" />
+    </div>
   </div>
   <div class="row">
     <div class="col-lg" style="background-color: green; min-height: 300px;"></div>
