--- a/src/app/history-page/story-element/story-element.component.html
+++ b/src/app/history-page/story-element/story-element.component.html
@@ -9,9 +9,11 @@
       <h2>{{subheader}}</h2>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="col-sm"><p>{{textbodyLeft}}</p></div>
-    <div class="col-sm"><p>{{textbodyRight}}</p></div>
+  <div class="row">
+    <div class="col-sm p-5"><p>{{textbodyLeft}}</p></div>
+  </div>
+  <div class="row">
+    <div class="col-sm p-5"><p>{{textbodyRight}}</p></div>
   </div>
 
 
