feat(19): Replace personas

--- a/src/app/history-page/accordion-element/accordion-element.component.html
+++ b/src/app/history-page/accordion-element/accordion-element.component.html
@@ -1,21 +1,21 @@
 <div ngbAccordion #accordion>
   <div ngbAccordionItem [collapsed]="false">
     <h2 ngbAccordionHeader>
-      <button ngbAccordionButton>{{jason_header}}</button>
+      <button ngbAccordionButton>{{rahjeet_header}}</button>
     </h2>
     <div ngbAccordionCollapse>
       <div ngbAccordionBody>
         <div class="row">
           <div class="col-lg">
-            <img src="{{jason_img}}" alt="" class="img-fluid rounded">
+            <img src="{{rahjeet_img}}" alt="" class="img-fluid rounded">
           </div>
         </div>
         <div class="row mt-5">
           <div class="col-lg">
-            <h2>{{jason_header}}</h2>
-            <h3>{{jason_title}}</h3>
-            <p>{{jason_body_0}}</p>
-            <p>{{jason_body_1}}</p>
+            <h2>{{rahjeet_header}}</h2>
+            <h3>{{rahjeet_title}}</h3>
+            <p>{{rahjeet_body_0}}</p>
+            <p>{{rahjeet_body_1}}</p>
           </div>
         </div>
       </div>
