--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -10,19 +10,23 @@
     </div>
     <div class="row mt-5">
       <div class="col-lg">
-        <app-story-element [alignRight]=true [year]=second_segment_year [subheader]=second_segment_subheader [textbodyLeft]="second_segment_text_0" [textbodyRight]="second_segment_text_1"/>
+        <app-story-element [year]=second_segment_year [subheader]=second_segment_subheader [textbodyLeft]="second_segment_text_0" [textbodyRight]="second_segment_text_1"/>
       </div>
       <div class="col-lg content-element">
         <app-accordion-element/>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-5">
       <div class="col-lg" style="background-color: green; min-height: 300px;"></div>
       <div class="col-lg" style="background-color: red; min-height: 300px;"></div>
     </div>
-    <div class="row">
-      <div class="col-lg" style="background-color: green; min-height: 300px;"></div>
-      <div class="col-lg" style="background-color: red; min-height: 300px;"></div>
+    <div class="row mt-5">
+      <div class="col-lg">
+        <app-story-element [year]=fourth_segment_year [subheader]=fourth_segment_subheader [textbodyLeft]="fourth_segment_text_0" [textbodyRight]="fourth_segment_text_1"/>
+      </div>
+      <div class="col-lg content-element align-self-center">
+        <app-carousel-element/>
+      </div>
     </div>
   </div>
 </div>
