--- a/src/app/history-page/story-element/story-element.component.html
+++ b/src/app/history-page/story-element/story-element.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg">
   <div class="row">
     <div class="col">
-      <h1 [ngClass]="{'align-right': isRightColumn}">{{year}}</h1>
+      <h1 [ngClass]="{'align-right': alignment==='right', 'align-center': alignment==='center'}">{{year}}</h1>
     </div>
   </div>
   <div class="row">
