feat(34): Implement fifth segment of history-page.component

--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -54,5 +54,14 @@
         <app-carousel-element/>
       </div>
     </div>
+    <div class="row mt-5">
+      <div class="col-lg order-lg-last">
+        <app-story-element alignment="right" [year]=fifth_segment_year [subheader]=fifth_segment_subheader
+                           [textbodyLeft]="fifth_segment_text_0" [textbodyRight]="fifth_segment_text_1"/>
+      </div>
+      <div class="col-lg content-element">
+        <img src="heart.jpg" class="img-fluid" style="border-radius: 50%;" alt="Heart">
+      </div>
+    </div>
   </div>
 </div>
