feat(35): Implement sixth segment of history-page.component

--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -63,5 +63,14 @@
         <img src="heart.jpg" class="img-fluid" style="border-radius: 50%;" alt="Heart">
       </div>
     </div>
+    <div class="row mt-5">
+      <div class="col-lg">
+        <app-story-element [year]=sixth_segment_year [subheader]=sixth_segment_subheader
+                           [textbodyLeft]="sixth_segment_text_0" [textbodyRight]="sixth_segment_text_1"/>
+      </div>
+      <div class="col-lg content-element">
+        <img src="sixth.jpg" class="img-fluid" alt="The future of the mf-consulting depicted by a man climbing stairs">
+      </div>
+    </div>
   </div>
 </div>
