feat(39): Implement timeline

--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -72,5 +72,10 @@
         <img src="sixth.jpg" class="img-fluid" alt="The future of the mf-consulting depicted by a man climbing stairs">
       </div>
     </div>
+    <div class="row mt-5">
+      <div class="col-lg">
+        <app-timeline/>
+      </div>
+    </div>
   </div>
 </div>
