feat(36): Implement youtube-section

--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -92,5 +92,15 @@
         <app-timeline/>
       </div>
     </div>
+    <app-divider-segment arrowDirection="left"/>
+    <div class="row mt-5 mb-5" id="video">
+      <div class="col-lg">
+        <app-story-element year="" subheader="TL:DR?"
+                           [textbodyLeft]="'Für alle Lesefaulen: '" [textbodyRight]="'Ihr könnt unsere Firmengeschichte auch als kurzes Video anschauen. Please like & subscribe ;)'"/>
+      </div>
+      <div class="col-lg content-element" >
+        <youtube-player width="100vw" videoId="UuW9qgsG7Mk"/>
+      </div>
+    </div>
   </div>
 </div>
