--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -98,8 +98,8 @@
         <app-story-element year="" subheader="TL:DR?"
                            [textbodyLeft]="'Für alle Lesefaulen: '" [textbodyRight]="'Ihr könnt unsere Firmengeschichte auch als kurzes Video anschauen. Please like & subscribe ;)'"/>
       </div>
-      <div class="col-lg content-element" >
-        <youtube-player width="100vw" videoId="UuW9qgsG7Mk"/>
+      <div class="col-lg content-element" #youtubePlayerContainer >
+        <youtube-player id="ytplayer" [width]="videoWidth" [height]="videoHeight" videoId="UuW9qgsG7Mk"/>
       </div>
     </div>
   </div>
