fix(37): Fix werte horizontal alignment after breaks

--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="row mt-5">
       <div class="col-md">
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-auto mt-2">
             <app-cards-element [imgUrl]=leidenschaft_url [textBody]=leidenschaft_body [title]="leidenschaft_title"/>
           </div>
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="col-md">
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-auto mt-2">
             <app-cards-element [imgUrl]=verantwortung_url [textBody]=verantwortung_body [title]="verantwortung_title"/>
           </div>
