fix(37): Fix display issue on header-segment on small displays, justify text below 480px for better readability

--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="row mt-5">
     <div class="col-lg">
-      <img src="section-1.webp" class="img-fluid" style="border-radius: 50%;" alt="">
+      <img src="section-1.webp" class="img-fluid p-5" style="border-radius: 50%;" alt="">
     </div>
     <div class="col-lg">
       <app-story-element [alignment]="'right'" [year]=first_segment_year [subheader]=first_segment_subheader
