--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 
 :root {
   --primary-color: #004B76;
@@ -12,4 +11,22 @@
   background-color: var(--accent-color) !important;
   color: var(--primary-color) !important;
 }
+
+@media (max-width: 720px) {
+  h1 {
+    font-size: 42px !important;
+  }
+
+  h2 {
+    font-size: 24px !important;
+  }
+}
+
+@media (max-width: 480px) {
+  p {
+    hyphens: auto;
+    text-align: justify;
+  }
+}
+
 
