fix(38): Fix footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-body-tertiary text-center text-lg-start">
   <div class="container">
-    <div class="row p-2">
+    <div class="row p-2 justify-content-center">
       <div class="col-lg-4 mb-md-0 text-center align-content-center">
         <h5 class="text-uppercase mb-0">Links</h5>
         <ul class="list-unstyled">
@@ -15,15 +15,18 @@
           </li>
         </ul>
       </div>
-      <div class="col-lg-4 mb-md-0">
-        <a routerLink="/"><img src="default-logo-transparent.png" alt="" class="img-fluid"></a>
-      </div>
+
       <div class="col-lg-4 mb-md-0 text-center align-content-center">
         <h5 class="text-uppercase mb-0">Abonniert unseren Newsletter</h5>
         <form class="form-floating">
           <input type="email" class="form-control" id="floatingInputValue">
           <label for="floatingInputValue">Deine E-Mail Adresse</label>
         </form>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-12 align-content-center">
+        <a routerLink="/"><img src="default-logo-transparent.png" alt="" style="max-width: 150px; max-height: 200px; display:block; margin:auto" class=""></a>
       </div>
     </div>
     <div class="row">
